# spline-interpolation

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: LICENCE  catmull_rom_spline.rs  hermite_spline.rs  interpolation.rs  lib.rs  math.rs  natural_cubic_spline.rs  tridiagonal_matrix.rs
src/interpolation/: catmull_rom_spline.rs  hermite_spline.rs  natural_cubic_spline.rs
src/math/: tridiagonal_matrix.rs
